# camera_app

./: .gitignore  Cargo.toml  QUICK_SETUP.md  README.md  SETUP.md  VCPKG_SETUP_NEXT.md
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: rust.yml
src/: main.rs
